# DetectExeName

./: CMakeLists.txt  DetectExeName.cc  README.md  main.cc
cmake/: ClangSanitizer.cmake
